@@ -2,4 +2,7 @@
   <typedef name="mapperresult"
            classpath="../../../../../build/testcases"
            classname="org.apache.tools.ant.types.mappers.MapperResult"/>
+
+  <!-- this is what you get with no result -->           
+  <property name="no-results" value="&lt;NULL&gt;" />           
 </project>
