@@ -1,0 +1,43 @@
+/*
+ * Copyright  2005 The Apache Software Foundation
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ *
+ */
+
+package org.apache.tools.ant.types.optional;
+
+import org.apache.tools.ant.BuildFileTest;
+
+/**
+ * Test our script mapping
+ */
+public class ScriptMapperTest extends BuildFileTest {
+    public ScriptMapperTest(String name) {
+        super(name);
+    }
+
+    public void setUp() {
+        configureProject("src/etc/testcases/types/mappers/scriptmapper.xml");
+    }
+
+    public void testClear() {
+        executeTarget("testClear");
+    }
+    public void testSetMultiple() {
+        executeTarget("testSetMultiple");
+    }
+    public void testPassthrough() {
+        executeTarget("testPassthrough");
+    }
+}
